--- a/index.html
+++ b/index.html
@@ -358,7 +358,31 @@ body {
     <div class="progress-text" id="progressText">0 / 7</div>
   </div>
 
-  <form id="mainForm" class="container" autocomplete="off">
+  <!-- FC 검색 화면 (폼 진입 전) -->
+  <div id="fcSearchView" class="container">
+    <div class="section">
+      <div class="section-title"><span class="section-num">✦</span>담당 FC 확인</div>
+      <p style="font-size:0.85rem; color:var(--text-sub); margin-bottom:1rem;">담당 재무설계사(FC) 이름을 입력해주세요.</p>
+      <div class="row">
+        <div class="field" style="flex:1;">
+          <label>FC 이름 <span class="required">*</span></label>
+          <div style="display:flex; gap:0.5rem;">
+            <input type="text" id="fcNameInput" placeholder="이름 입력" style="flex:1;">
+            <button type="button" id="fcSearchBtn" style="padding:0.6rem 1.2rem; background:var(--gold); color:#fff; border:none; border-radius:0.5rem; font-size:0.85rem; font-weight:500; cursor:pointer; white-space:nowrap;">검색</button>
+          </div>
+        </div>
+      </div>
+      <div id="fcSearchResult" style="margin-top:1rem; display:none;"></div>
+      <div id="fcConfirmed" style="margin-top:1rem; display:none; padding:0.8rem 1rem; background:#F0EDE8; border-radius:0.5rem; display:none;">
+        <span style="font-size:0.85rem; color:var(--gold-dark); font-weight:500;" id="fcConfirmedText"></span>
+        <input type="hidden" id="fcId" value="">
+        <input type="hidden" id="fcNameVal" value="">
+      </div>
+      <button type="button" id="fcNextBtn" disabled style="margin-top:1.5rem; width:100%; padding:0.9rem; background:var(--gold); color:#fff; border:none; border-radius:0.6rem; font-size:0.95rem; font-weight:600; cursor:pointer; opacity:0.4; transition:opacity 0.3s;">정보 입력 시작 →</button>
+    </div>
+  </div>
+
+  <form id="mainForm" class="container" autocomplete="off" style="display:none;">
 
     <div id="errorMsg" class="error-msg"></div>
 
@@ -563,6 +587,83 @@ body {
 const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwsgKgSGktuF9sK0GSQQU0MPW8bGGgFPAckPtDxzlPS6rzE_yoxQYBncyZ2LFDOir_pHw/exec';
 
 // ============================================================
+// FC 검색 로직
+// ============================================================
+const fcNameInput = document.getElementById('fcNameInput');
+const fcSearchBtn = document.getElementById('fcSearchBtn');
+const fcSearchResult = document.getElementById('fcSearchResult');
+const fcConfirmed = document.getElementById('fcConfirmed');
+const fcNextBtn = document.getElementById('fcNextBtn');
+
+let selectedFC = null;
+
+fcSearchBtn.addEventListener('click', searchFC);
+fcNameInput.addEventListener('keydown', function(e) {
+  if (e.key === 'Enter') { e.preventDefault(); searchFC(); }
+});
+
+async function searchFC() {
+  const name = fcNameInput.value.trim();
+  if (!name) { alert('이름을 입력해주세요.'); fcNameInput.focus(); return; }
+
+  fcSearchBtn.disabled = true;
+  fcSearchBtn.textContent = '검색 중...';
+  fcSearchResult.style.display = 'none';
+  fcConfirmed.style.display = 'none';
+  selectedFC = null;
+  fcNextBtn.disabled = true;
+  fcNextBtn.style.opacity = '0.4';
+
+  try {
+    const url = SCRIPT_URL + '?action=searchFC&name=' + encodeURIComponent(name);
+    const res = await fetch(url);
+    const json = await res.json();
+
+    if (json.status === 'ok' && json.results && json.results.length > 0) {
+      if (json.results.length === 1) {
+        // 1명 매칭 → 바로 확인
+        confirmFC(json.results[0]);
+      } else {
+        // 동명이인 → 지점으로 구분 선택
+        let html = '<p style="font-size:0.85rem; color:var(--text); margin-bottom:0.5rem;">검색 결과 ' + json.results.length + '명:</p>';
+        json.results.forEach(fc => {
+          html += '<button type="button" class="fc-pick-btn" onclick=\'confirmFC(' + JSON.stringify(fc).replace(/'/g,"&#39;") + ')\''
+            + ' style="display:block; width:100%; text-align:left; padding:0.7rem 1rem; margin-bottom:0.4rem; background:var(--input-bg); border:1px solid var(--border); border-radius:0.5rem; cursor:pointer; font-size:0.85rem;">'
+            + fc.name + ' <span style="color:var(--text-sub);">(' + fc.branch + ')</span></button>';
+        });
+        fcSearchResult.innerHTML = html;
+        fcSearchResult.style.display = 'block';
+      }
+    } else {
+      fcSearchResult.innerHTML = '<p style="color:var(--error); font-size:0.85rem;">해당 이름의 FC를 찾을 수 없습니다.</p>';
+      fcSearchResult.style.display = 'block';
+    }
+  } catch (err) {
+    fcSearchResult.innerHTML = '<p style="color:var(--error); font-size:0.85rem;">검색 중 오류가 발생했습니다. 다시 시도해주세요.</p>';
+    fcSearchResult.style.display = 'block';
+  }
+  fcSearchBtn.disabled = false;
+  fcSearchBtn.textContent = '검색';
+}
+
+function confirmFC(fc) {
+  selectedFC = fc;
+  fcSearchResult.style.display = 'none';
+  fcConfirmed.style.display = 'block';
+  document.getElementById('fcConfirmedText').textContent = '✓ ' + fc.name + ' (' + fc.branch + ')';
+  document.getElementById('fcId').value = fc.id;
+  document.getElementById('fcNameVal').value = fc.name;
+  fcNextBtn.disabled = false;
+  fcNextBtn.style.opacity = '1';
+}
+
+fcNextBtn.addEventListener('click', function() {
+  if (!selectedFC) return;
+  document.getElementById('fcSearchView').style.display = 'none';
+  document.getElementById('mainForm').style.display = 'block';
+});
+
+// ============================================================
 // 진행률 바
 // ============================================================
 const form = document.getElementById('mainForm');
@@ -661,6 +762,8 @@ form.addEventListener('submit', async function(e) {
     data[k] = v.replace(/,/g, '');
   });
   data.timestamp = new Date().toLocaleString('ko-KR');
+  data.fc_id = document.getElementById('fcId').value;
+  data.fc_name = document.getElementById('fcNameVal').value;
 
   try {
     if (!SCRIPT_URL) {
